packages/react-native/cpp/derec_ffi.h

typedef struct DeRecError {
  int32_t category;
  int32_t code;
  /**
   * Owned C string. Null on success. Released by [`derec_free_error`].
   */
  char *message;
  /**
   * Valid when `code == DEREC_CODE_NON_OK_STATUS`.
   */
  int32_t peer_status;
  /**
   * Owned C string. Null when not applicable. Released by [`derec_free_error`].
   */
  char *peer_memo;
  /**
   * Valid when `code == DEREC_CODE_VERSION_MISMATCH`.
   */
  uint32_t expected;
  /**
   * Valid when `code == DEREC_CODE_VERSION_MISMATCH`.
   */
  uint32_t got;
} DeRecError;
typedef struct DeRecBuffer {
  uint8_t *ptr;
  size_t len;
} DeRecBuffer;
typedef struct ProduceGetSecretIdsVersionsRequestMessageResult {
  struct DeRecError error;
  struct DeRecBuffer envelope_wire_bytes;
} ProduceGetSecretIdsVersionsRequestMessageResult;
typedef struct ExtractGetSecretIdsVersionsRequestResult {
  struct DeRecError error;
  uint64_t channel_id;
  /**
   * prost-encoded inner `GetSecretIdsVersionsRequestMessage` bytes.
   * Empty buffer when extraction fails. SDK consumers decode this
   * to inspect optional fields such as `reply_to`.
   */
  struct DeRecBuffer request_proto_bytes;
} ExtractGetSecretIdsVersionsRequestResult;
typedef struct ProduceGetSecretIdsVersionsResponseMessageResult {
  struct DeRecError error;
  struct DeRecBuffer envelope_wire_bytes;
} ProduceGetSecretIdsVersionsResponseMessageResult;
typedef struct ExtractGetSecretIdsVersionsResponseResult {
  struct DeRecError error;
  uint64_t channel_id;
  /**
   * Inner `GetSecretIdsVersionsResponseMessage` proto bytes for chaining
   * into [`process_get_secret_ids_versions_response_message`].
   */
  struct DeRecBuffer response_proto_bytes;
} ExtractGetSecretIdsVersionsResponseResult;
typedef struct ProcessGetSecretIdsVersionsResponseMessageResult {
  struct DeRecError error;
  /**
   * Validated secret list in the format documented at the module level.
   */
  struct DeRecBuffer secret_list_bytes;
} ProcessGetSecretIdsVersionsResponseMessageResult;
/**
 * # Safety
 *
 * Non-null input pointers must point to the corresponding readable byte ranges.
 */
struct ProduceGetSecretIdsVersionsRequestMessageResult produce_get_secret_ids_versions_request_message(uint64_t channel_id,
                                                                                                       const uint8_t *shared_key_ptr,
                                                                                                       size_t shared_key_len,
                                                                                                       const uint8_t *reply_to_ptr,
                                                                                                       size_t reply_to_len);
/**
 * # Safety
 *
 * Non-null input pointers must point to the corresponding readable byte ranges.
 */
struct ExtractGetSecretIdsVersionsRequestResult extract_get_secret_ids_versions_request(const uint8_t *request_ptr,
                                                                                        size_t request_len,
                                                                                        const uint8_t *shared_key_ptr,
                                                                                        size_t shared_key_len);
/**
 * `secret_list_ptr` / `secret_list_len` must follow the binary format
 * documented at the module level.
 *
 * # Safety
 *
 * Non-null input pointers must point to the corresponding readable byte ranges.
 */
struct ProduceGetSecretIdsVersionsResponseMessageResult produce_get_secret_ids_versions_response_message(uint64_t channel_id,
                                                                                                         const uint8_t *secret_list_ptr,
                                                                                                         size_t secret_list_len,
                                                                                                         const uint8_t *shared_key_ptr,
                                                                                                         size_t shared_key_len);
/**
 * # Safety
 *
 * Non-null input pointers must point to the corresponding readable byte ranges.
 */
struct ExtractGetSecretIdsVersionsResponseResult extract_get_secret_ids_versions_response(const uint8_t *response_ptr,
                                                                                          size_t response_len,
                                                                                          const uint8_t *shared_key_ptr,
                                                                                          size_t shared_key_len);
/**
 * `response_proto_ptr` / `response_proto_len` must be the
 * `response_proto_bytes` returned by
 * [`extract_get_secret_ids_versions_response`].
 *
 * # Safety
 *
 * Non-null input pointers must point to the corresponding readable byte ranges.
 */
struct ProcessGetSecretIdsVersionsResponseMessageResult process_get_secret_ids_versions_response_message(const uint8_t *response_proto_ptr,
                                                                                                         size_t response_proto_len);